fix multi overlap on original sentence

--- a/css/index.css
+++ b/css/index.css
@@ -371,6 +371,10 @@ span.outside {
     padding-bottom: 6px;
 }
 
+span.middleside {
+    padding-bottom: 4.5px;
+}
+
 .lh-paras {
     line-height: 1.7;
 }
